[project]
name = "webhook-updater"
version = "0.1.0"
description = "Frontend file updater whne call webhook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi",
    "jsonschema>=4.25.0",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pylance>=0.32.0",
    "ruff>=0.12.7",
]
